[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes_N_Scripts/PlayerStuff/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes_N_Scripts/GameFolder/SceneManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes_N_Scripts/PlayerStuff/PlayerShip.gd" type="Script" id=3]
[ext_resource path="res://Scenes_N_Scripts/PlayerStuff/Engine.gd" type="Script" id=4]
[ext_resource path="res://Scenes_N_Scripts/PlayerStuff/engine_smoke.tres" type="Material" id=5]
[ext_resource path="res://Resources/Artwork/Effects/smoke1.png" type="Texture" id=6]
[ext_resource path="res://Resources/Artwork/Player/ship_engine.png" type="Texture" id=7]
[ext_resource path="res://Resources/Audio/engine_purr1_mid.wav" type="AudioStream" id=8]
[ext_resource path="res://Resources/Artwork/Player/ship_bodyv2.png" type="Texture" id=9]
[ext_resource path="res://Resources/Artwork/Player/ship_core_energy.png" type="Texture" id=10]
[ext_resource path="res://Resources/Artwork/Player/ship_center.png" type="Texture" id=11]
[ext_resource path="res://Resources/Artwork/Player/Space_ship_ring.png" type="Texture" id=12]
[ext_resource path="res://Resources/Audio/pick_up_best.wav" type="AudioStream" id=13]
[ext_resource path="res://Resources/Artwork/Player/player_particle_death.tres" type="Material" id=14]

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=2]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 360.0, 180.0, 0.0 ]
}

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 47.0082

[node name="Player" type="Node2D" index="0"]

scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )
_sections_unfolded = [ "Linear", "Transform", "Visibility" ]

[node name="Camera2D" type="Camera2D" parent="." index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 100.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Offset", "Smoothing" ]
__meta__ = {
"_edit_lock_": true
}

[node name="SceneManager" parent="Camera2D" index="0" instance=ExtResource( 2 )]

margin_left = -600.0
margin_top = -400.0
margin_right = 600.0
margin_bottom = 336.0
rect_min_size = Vector2( 1200, 800 )

[node name="Label2" type="Label" parent="Camera2D" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -557.0
margin_top = -418.0
margin_right = -452.0
margin_bottom = -379.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "CORE HEAT"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="Camera2D" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -520.0
margin_top = 41.0
margin_right = -321.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "FUEL"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Hint", "Margin", "Mouse", "Size Flags", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="FuelBar" type="ProgressBar" parent="Camera2D" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -554.0
margin_top = 530.0
margin_right = -98.0
margin_bottom = 613.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 30.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Focus", "Hint", "Percent", "Rect" ]

[node name="CoreHeat" type="ProgressBar" parent="Camera2D" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -561.0
margin_top = -77.0
margin_right = -260.0
margin_bottom = 23.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 60.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Grow Direction", "Percent", "Rect" ]

[node name="Area2D" type="Area2D" parent="Camera2D" index="5"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D" index="0"]

position = Vector2( 4.41142, -3.27003 )
scale = Vector2( 12.9877, 12.6301 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerShip" type="RigidBody2D" parent="." index="1"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 300.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = false
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = 3.0
script = ExtResource( 3 )
_sections_unfolded = [ "Angular", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="EngineCooldown" type="Timer" parent="PlayerShip" index="0"]

process_mode = 1
wait_time = 0.8
one_shot = false
autostart = false

[node name="Engine" type="Node2D" parent="PlayerShip" index="1"]

position = Vector2( 0, 0.504218 )
scale = Vector2( 0.3, 0.2 )
script = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="SmokeEmitter" type="Particles2D" parent="PlayerShip/Engine" index="0"]

position = Vector2( 0, 540 )
rotation = 1.5708
scale = Vector2( 1.95258, 2.66407 )
emitting = false
amount = 30
lifetime = 0.3
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.85
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = ExtResource( 5 )
texture = ExtResource( 6 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform" ]

[node name="Engine_Sprite" type="Sprite" parent="PlayerShip/Engine" index="1"]

position = Vector2( -7.16551e-07, 347.173 )
rotation = 1.5708
scale = Vector2( 0.434152, 0.4 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="EngineBuzz" type="AudioStreamPlayer" parent="PlayerShip/Engine" index="2"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="Body" type="Node2D" parent="PlayerShip" index="2"]

scale = Vector2( 0.1, 0.1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Ring" type="Sprite" parent="PlayerShip/Body" index="0"]

scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Body_core" type="Sprite" parent="PlayerShip/Body" index="1"]

scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerShip/Body/Body_core" index="0"]

root_node = NodePath("..")
autoplay = "Rotation"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Rotation = SubResource( 2 )
blend_times = [  ]

[node name="Body_top" type="Sprite" parent="PlayerShip/Body" index="2"]

texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Body_bottom" type="Sprite" parent="PlayerShip/Body" index="3"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="SoundImpulse" type="AudioStreamPlayer" parent="PlayerShip" index="3"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.2
autoplay = false
mix_target = 0
bus = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerShip" index="4"]

shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="DeathSmoke" type="Particles2D" parent="PlayerShip" index="5"]

scale = Vector2( 0.45, 0.45 )
emitting = false
amount = 180
lifetime = 3.0
one_shot = true
preprocess = 0.0
speed_scale = 2.0
explosiveness = 0.85
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = ExtResource( 14 )
texture = ExtResource( 6 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="PlayerShip/EngineCooldown" to="PlayerShip" method="_on_EngineCooldown_timeout"]


